update jdk 17 -> 23 to fix error _ lambda expression