@@ -1,12 +1,12 @@
 # Build stage
-FROM maven:3.9-eclipse-temurin-17 AS build
+FROM maven:3.9-eclipse-temurin-21 AS build
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
-RUN mvn clean package -DskipTests --enable-preview
+RUN mvn clean package -DskipTests
 
 # Run stage
-FROM tomcat:10-jdk17
+FROM tomcat:10.1.24-jdk21
 WORKDIR /usr/local/tomcat/webapps/
 COPY --from=build /app/target/*.war ./ROOT.war
 EXPOSE 8080
